UPDATE: text-shadow styles FIXED: Forums 3rd level borders UPDATE: added for iPad ios5 -webkit-overflow-scrolling : touch; UPDATE: further updates to loadModules Nav for 3 levels UPDATE: PSP bottom scrollbar

--- a/trunk/CO_FILES/css/apps/desktop.css
+++ b/trunk/CO_FILES/css/apps/desktop.css
@@ -43,13 +43,13 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f2f2f2', end
 #desktopLicense .small {
 	color: #717880;
 	font-size: 14px;
-	text-shadow: 1px 1px 1px #FFFFFF;
+	text-shadow: 0px 1px 1px #FFFFFF;
 }
 
 #desktopLicense .large {
 	color: #717880;
 	font-size: 19px;
-	text-shadow: 1px 1px 1px #FFFFFF;
+	text-shadow: 0px 1px 1px #FFFFFF;
 }
 
 
@@ -226,7 +226,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f0f0be', end
 }
 
 #desktop .postit-text {
-	font-family: 'Comic Sans MS';
+	font-family: 'Comic Sans MS', 'Marker Felt';
 	font-size: 16px;
 	overflow: hidden;
 }
@@ -236,7 +236,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f0f0be', end
     border: 0 none;
 	padding: 0;
 	margin: 0;
-	font-family: 'Comic Sans MS';
+	font-family: 'Comic Sans MS', 'Marker Felt';
 	font-size: 16px; 
 }
 
